# go2_description

./: CMakeLists.txt  README.md  colcon.pkg  package.xml
model/: go2.urdf
python/: CMakeLists.txt
python/go2_description/: __init__.py  loader.py  path.py.in
